实现登录注册

--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.11.1",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^6.0.0",
     "next": "15.3.4",
+    "next-auth": "^4.24.11",
     "prisma": "^6.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
