--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
 DATABASE_URL="postgresql://postgres:123456@47.112.100.73:45432/nextjs_gemini_db"
+
+# NextAuth.js 配置
+NEXTAUTH_SECRET="your-secret-key-here-change-in-production"
+NEXTAUTH_URL="http://localhost:3000"
+
+# OAuth 提供商配置 (可选)
+# GOOGLE_CLIENT_ID="your-google-client-id"
+# GOOGLE_CLIENT_SECRET="your-google-client-secret"
+# GITHUB_CLIENT_ID="your-github-client-id"
+# GITHUB_CLIENT_SECRET="your-github-client-secret"
